Fixing RSVP link, getting there panel spacing

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -471,7 +471,7 @@ dl {
 
     .text-panel-dark {
         background: rgba(0, 2, 0, 0.7);
-        padding: 20px;
+        padding: 30px 20px 10px 20px;
         margin-bottom: 30px;
     }
 }
